@@ -740,11 +740,7 @@ module Nokogiri
         # FIXME: this is a hack around broken libxml versions
         return dump_html if %w[2 6] === LIBXML_VERSION.split('.')[0..1]
 
-        options[:save_with] ||= SaveOptions::FORMAT |
-                                SaveOptions::NO_DECLARATION |
-                                SaveOptions::NO_EMPTY_TAGS |
-                                SaveOptions::AS_HTML
-
+        options[:save_with] ||= SaveOptions::DEFAULT_HTML
         serialize(options)
       end
 
@@ -755,8 +751,7 @@ module Nokogiri
       #
       # See Node#write_to for a list of +options+
       def to_xml options = {}
-        options[:save_with] ||= SaveOptions::FORMAT | SaveOptions::AS_XML
-
+        options[:save_with] ||= SaveOptions::DEFAULT_XML
         serialize(options)
       end
 
@@ -770,11 +765,7 @@ module Nokogiri
         # FIXME: this is a hack around broken libxml versions
         return dump_html if %w[2 6] === LIBXML_VERSION.split('.')[0..1]
 
-        options[:save_with] ||= SaveOptions::FORMAT |
-                                SaveOptions::NO_DECLARATION |
-                                SaveOptions::NO_EMPTY_TAGS |
-                                SaveOptions::AS_XHTML
-
+        options[:save_with] ||= SaveOptions::DEFAULT_XHTML
         serialize(options)
       end
 
@@ -817,10 +808,7 @@ module Nokogiri
         # FIXME: this is a hack around broken libxml versions
         return (io << dump_html) if %w[2 6] === LIBXML_VERSION.split('.')[0..1]
 
-        options[:save_with] ||= SaveOptions::FORMAT |
-          SaveOptions::NO_DECLARATION |
-          SaveOptions::NO_EMPTY_TAGS |
-          SaveOptions::AS_HTML
+        options[:save_with] ||= SaveOptions::DEFAULT_HTML
         write_to io, options
       end
 
@@ -832,10 +820,7 @@ module Nokogiri
         # FIXME: this is a hack around broken libxml versions
         return (io << dump_html) if %w[2 6] === LIBXML_VERSION.split('.')[0..1]
 
-        options[:save_with] ||= SaveOptions::FORMAT |
-          SaveOptions::NO_DECLARATION |
-          SaveOptions::NO_EMPTY_TAGS |
-          SaveOptions::AS_XHTML
+        options[:save_with] ||= SaveOptions::DEFAULT_XHTML
         write_to io, options
       end
 
@@ -846,7 +831,7 @@ module Nokogiri
       #
       # See Node#write_to for a list of options
       def write_xml_to io, options = {}
-        options[:save_with] ||= SaveOptions::FORMAT | SaveOptions::AS_XML
+        options[:save_with] ||= SaveOptions::DEFAULT_XML
         write_to io, options
       end
 
