@@ -3,6 +3,7 @@
 * New Features
 
   * Nokogiri::HTML::Document#title accessor gets and sets the document title.
+  * extracted sets of Node::SaveOptions into Node::SaveOptions::DEFAULT_{X,H,XH}TML (refactor)
 
 * Bugfixes
 
